Add devise configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,8 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
+  username: rails
+  password: 720389
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
