Modify config files

--- a/config/database.yml
+++ b/config/database.yml
@@ -19,13 +19,14 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  username: rails
-  password: 720389
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
   database: recipe_app_development
+
+  username: <%= ENV["USER_NAME"] %>
+  password: <%= ENV["PASSWORD"] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,6 +61,9 @@ development:
 test:
   <<: *default
   database: recipe_app_test
+
+  username: <%= ENV["USER_NAME"] %>
+  password: <%= ENV["PASSWORD"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
