Remove role from users

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: rails
+  password: 720389
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
@@ -25,8 +27,6 @@ development:
   <<: *default
   database: recipe_app_development
 
-  username: <%= ENV["USER_NAME"] %>
-  password: <%= ENV["PASSWORD"] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -62,8 +62,6 @@ test:
   <<: *default
   database: recipe_app_test
 
-  username: <%= ENV["USER_NAME"] %>
-  password: <%= ENV["PASSWORD"] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
