--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,18 @@
 databases:
   - name: mysite
-    ipAllowList: []
+    databaseName: mysite
+    user: mysite
 
 services:
   - type: web
-    name: recipe
+    name: mysite
     env: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec rails s"
+    startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
-      - key: RAILS_MASTER_KEY
-        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: mysite
           property: connectionString
-  - type: redis
-    name: redis
-    ipAllowList: []
-    plan: free
-    maxmemoryPolicy: noeviction
-      
+      - key: RAILS_MASTER_KEY
+        sync: false
