--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,23 @@
 databases:
   - name: mysite
-    databaseName: mysite
-    user: mysite
+    ipAllowList: []
 
 services:
   - type: web
-    name: mysite
+    name: recipe
     env: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    startCommand: "bundle exec rails s"
     envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: mysite
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
+      
